--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-server.datasource
+server.datasource.url=jdbc:mysql://localhost:3306/transport_pro?createDatabase
+IfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring
 
 
