--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-server.datasource.url=jdbc:mysql://localhost:3306/transport_pro?createDatabase
+server.datasource.url=jdbc:mysql://localhost:3306/postsurgery?createDatabase
 IfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
