--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-server.datasource.url=jdbc:mysql://localhost:3306/postsurgery?createDatabaseIfNotExist=true
+server.datasource.url=jdbc:mysql://localhost:3306/postsurgery_pro?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
