--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-server.datasource.url=jdbc:mysql://localhost:3306/postsurgery_pro?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/postsurgery_pro?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
