--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
     </properties>
 
     <dependencies>
+      <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+    <version>4.0.0</version>
+</dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
