--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,18 @@
-# Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.application.name=demo
+# Don't change the port
+server.port=9001
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
-# H2 Console (for development)
-spring.h2.console.enabled=true
 
-# JWT Configuration
-jwt.secret=mySecretKey
-jwt.expiration=86400000
+# for https
+spring.datasource.url=jdbc:mysql://localhost:3306/DVD?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Swagger Configuration
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+jwt.secret=MyVeryStrongJwtSecretKeyThatIsAtLeast32Characters
+jwt.validity=86400000
